fix: truncate URLs from the start

--- a/src/app/features/analysis-run/ui/analysis-unfinished-modal/analysis-unfinished-modal.component.scss
+++ b/src/app/features/analysis-run/ui/analysis-unfinished-modal/analysis-unfinished-modal.component.scss
@@ -71,6 +71,8 @@
 }
 
 .details__url {
+  direction: rtl;
+  text-align: left;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
