--- a/src/app/features/analysis-run/ui/info-panel/info-panel.component.scss
+++ b/src/app/features/analysis-run/ui/info-panel/info-panel.component.scss
@@ -19,14 +19,14 @@
   width: 100%;
   max-width: 32rem;
 
-  @media (min-width: 767px) and (min-height: 850px) {
+  @media (min-width: 1220px), (min-width: 800px) and (min-height: 860px) {
     position: absolute;
     top: 2rem;
     right: 2rem;
     padding: 1.25rem 1.5rem;
     border: 1px solid var(--border-subtle);
     border-radius: 10px;
-    max-width: 22rem;
+    max-width: 18rem;
     width: max-content;
   }
 }
@@ -56,9 +56,11 @@
 }
 
 .details__url {
+  direction: rtl;
+  text-align: left;
   overflow: hidden;
-  text-overflow: ellipsis;
   white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .details__range {
